feat: Message search
